# syncthing-mcp-rs

./: .dockerignore  .env.enc  .gitignore  .sops.yaml  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  lcov.info  print_connections.rs
.gemini/: settings.json
.gemini/commands/: build-fix.toml  live-test.toml  release-summary.toml  release.toml  test-fix.toml
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/advanced_replication_20260322/: index.md  metadata.json  plan.md  spec.md
conductor/archive/advanced_sync_ops_20260405/: index.md  metadata.json  spec.md
conductor/archive/api_extension_20260323/: index.md  spec.md
conductor/archive/bandwidth_orchestration_20260324/: index.md  spec.md
conductor/archive/code_quality_20260322/: index.md  plan.md  spec.md
conductor/archive/config_diff_20260324/: index.md
conductor/archive/configuration_and_error_management_20260405/: index.md  metadata.json  plan.md  spec.md
conductor/archive/configure_sharing_20260321/: index.md  metadata.json  plan.md  spec.md
conductor/archive/conflict_intelligence_20260324/: index.md  metadata.json  plan.md
conductor/archive/conflict_management_20260322/: index.md  metadata.json
conductor/archive/core_functionality_20260321/: plan.md
conductor/archive/dev_experience_and_security_20260322/: index.md  metadata.json  plan.md
conductor/archive/docker_integration_20260321/: index.md  metadata.json  spec.md
conductor/archive/error_diagnostics_20260322/: research.md
conductor/archive/event_notifications_20260322/: index.md  metadata.json  spec.md
conductor/archive/event_timeline_analysis_20260405/: index.md  metadata.json  plan.md
conductor/archive/feature_gaps_20260322/: plan.md  spec.md
conductor/archive/file_and_sync_diagnostics_20260405/: index.md  metadata.json  spec.md
conductor/archive/get_sync_status_20260321/: index.md  metadata.json  spec.md
conductor/archive/git_sync_20260324/: index.md  metadata.json  plan.md  spec.md
conductor/archive/global_dashboard_20260324/: index.md  metadata.json  plan.md  spec.md
conductor/archive/gui_security_management_20260405/: plan.md
conductor/archive/http_sse_transport_20260322/: index.md  metadata.json  spec.md
conductor/archive/instance_management_20260322/: index.md  plan.md  spec.md
conductor/archive/maintain_system_20260321/: spec.md
conductor/archive/manage_devices_20260321/: index.md  metadata.json  spec.md
conductor/archive/manage_ignores_20260321/: index.md  metadata.json  plan.md  spec.md
conductor/archive/network_and_discovery_troubleshooting_20260405/: index.md  metadata.json  spec.md
conductor/archive/network_performance_analytics_20260405/: index.md  plan.md  spec.md
conductor/archive/replicate_config_20260321/: index.md  plan.md  spec.md
conductor/archive/security_backends_20260324/: index.md  metadata.json  plan.md
conductor/archive/self_healing_20260324/: index.md  metadata.json  plan.md  spec.md
conductor/archive/token_optimization_20260404/: index.md  metadata.json  research.md  signatures.md  spec.md
conductor/tracks/advanced_replication_20260322/: plan.md
conductor/tracks/advanced_sync_ops_20260405/: plan.md
conductor/tracks/api_extension_20260323/: metadata.json  plan.md
conductor/tracks/bandwidth_orchestration_20260324/: metadata.json  plan.md
conductor/tracks/code_quality_20260322/: metadata.json  plan.md
conductor/tracks/config_diff_20260324/: metadata.json  plan.md  spec.md
conductor/tracks/configuration_and_error_management_20260405/: plan.md
conductor/tracks/configure_sharing_20260321/: plan.md
conductor/tracks/conflict_intelligence_20260324/: plan.md  spec.md
conductor/tracks/conflict_management_20260322/: plan.md  spec.md
scripts/: run_live_new_tools.rs  run_new_tools.rs  test_live_bandwidth_tools.rs  test_live_config_error.rs  test_live_conflict_tools.rs  token_benchmark.rs  verify_api_live.rs  verify_config_export.rs  verify_diagnose_network_issues.rs  verify_event_timeline_phase1.rs  verify_event_timeline_phase2.rs  verify_git_integration.rs  verify_gui_api_live.rs  verify_health_check.rs  verify_network_models.rs  verify_phase1.rs  verify_phase2.rs  verify_rollback.rs  verify_sync_ops_live.rs
src/: error.rs  error_diagnostics_tests.rs  error_tests.rs  lib.rs  main.rs  test_utils.rs
src/api/: client.rs  config_error_tests.rs  config_sync_error_client_tests.rs  event_tests.rs  event_timeline_tests.rs  gui_client_tests.rs  gui_models_tests.rs  health_tests.rs  mod.rs  models.rs  network_models_tests.rs  patch_tests.rs  sync_ops_client_tests.rs  sync_ops_models_tests.rs  tests.rs
src/config/: http_tests.rs  mod.rs  tests.rs
src/credentials/: abstraction_tests.rs  aws_tests.rs  mock_tests.rs  mod.rs  vault_tests.rs
src/mcp/: conflict_tests.rs  duplex_tests.rs  error_integration_tests.rs  event_tests.rs  events.rs  http_tests.rs  mod.rs  optimization.rs  optimization_tests.rs  server.rs  tests.rs  types.rs  types_tests.rs
src/tools/: bandwidth.rs  bandwidth_mcp_tests.rs  bandwidth_tests.rs  batch_folder_tests.rs  browse_folder_optimization_tests.rs  browser.rs  browser_tests.rs  config.rs  config_diff.rs  config_diff_tests.rs  config_error_mcp_tests.rs  config_tests.rs  conflict_summary_tests.rs  conflicts.rs  connectivity_watchdog.rs  connectivity_watchdog_tests.rs  dashboard.rs  dashboard_tests.rs  devices.rs  devices_tests.rs  diagnostics.rs  diagnostics_tests.rs  diff.rs  diff_tests.rs  event_timeline.rs  event_timeline_tests.rs  file_diagnostics.rs  folders.rs  folders_tests.rs  git_sync.rs  git_sync_tests.rs  gui_settings.rs  gui_settings_tests.rs  inspect_device_tests.rs  inspect_folder_tests.rs  instance_overview_tests.rs  lifecycle_tests.rs  mod.rs  patch_config_tests.rs  profile_tests.rs  (+5 more)
tests/: docker_integration_test.rs  git_sync_integration_test.rs  live.rs  self_healing_integration_test.rs
tests/common/: mod.rs
(+53 files in other folders)
