[package]
name = "syncthing-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
dashmap = "6.1"
futures = "0.3"
lazy_static = "1.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart", "query"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
keyring = "3.6"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
tokio = { version = "1.49", features = ["full", "test-util"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.20", features = ["v4", "fast-rng"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.24"
testcontainers = "0.26"
testcontainers-modules = "0.14"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI
debug = 0               # No debug info needed for basic CI checks
