[package]
name = "syncthing-mcp-rs"
version = "0.1.12"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
dashmap = "6.1"
futures = "0.3"
lazy_static = "1.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart", "query"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
keyring = "3.6"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
tokio = { version = "1.49", features = ["full", "test-util"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.20", features = ["v4", "fast-rng"] }
regex = "1.12.3"
trash = "5.2.5"
async-recursion = "1.1.1"
similar = "2.7.0"
serde_json_diff = "0.2.0"
serde_yaml_ng = "0.10.0"

[[example]]
name = "run_new_tools"
path = "scripts/run_new_tools.rs"

[[example]]
name = "run_live_new_tools"
path = "scripts/run_live_new_tools.rs"

[[example]]
name = "test_live_conflict_tools"
path = "scripts/test_live_conflict_tools.rs"

[[example]]
name = "verify_health_check"
path = "scripts/verify_health_check.rs"

[[example]]
name = "test_live_bandwidth_tools"
path = "scripts/test_live_bandwidth_tools.rs"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.24"
testcontainers = "0.26"
testcontainers-modules = "0.14"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

[[example]]
name = "verify_config_export"
path = "scripts/verify_config_export.rs"

[[example]]
name = "verify_git_integration"
path = "scripts/verify_git_integration.rs"

[[example]]
name = "verify_rollback"
path = "scripts/verify_rollback.rs"

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI
debug = 0               # No debug info needed for basic CI checks
